classDiagram
    class Card{
        +int value
        +str suit
        +str rank
    }
    class Deck{
        +List[Card] cards
        +void shuffle()
        +Card deal_card()
    }
    class Hand{
        +List[Card] cards
        +int get_value()
        +void add_card(Card card)
        +void clear()
    }
    class Player{
        +str name
        +int chips
        +Hand hand
        +void add_chips(int amount)
        +void remove_chips(int amount)
        +void add_card(Card card)
        +void clear_hand()
    }
    class Dealer{
        +Hand hand
        +void add_card(Card card)
        +void clear_hand()
    }
    class Game{
        +Player player
        +Dealer dealer
        +Deck deck
        +int bet
        +int winnings
        +void start_game()
        +void place_bet(int amount)
        +void deal_initial_cards()
        +void player_hit()
        +void player_stand()
        +void dealer_hit()
        +void determine_winner()
        +void end_game()
    }
    class CLI{
        +Game game
        +void start()
        +void print_welcome_message()
        +void print_instructions()
        +void print_current_hand()
        +void print_dealer_hand()
        +void print_outcome()
        +void print_total_winnings()
        +void print_quit_message()
        +void get_user_input()
    }
    class ASCIIArt{
        +str get_welcome_message()
        +str get_card_art(Card card)
    }
    class Utils{
        +str format_currency(int amount)
    }
    Card "1" -- "1" Deck: belongs to
    Hand "1" -- "1" Player: belongs to
    Hand "1" -- "1" Dealer: belongs to
    Player "1" -- "1" Game: belongs to
    Dealer "1" -- "1" Game: belongs to
    Deck "1" -- "1" Game: belongs to
    CLI "1" -- "1" Game: uses
    ASCIIArt "1" -- "1" CLI: uses
    Utils "1" -- "1" CLI: uses
    Utils "1" -- "1" Game: uses
